@@ -1,5 +1,10 @@
 2007-04-24  Eitan Isaacson  <eitan@ascender.com>
 
+	* src/lib/accerciser/script_playback.py: Added a quick fix for
+	headless setups.
+
+2007-04-24  Eitan Isaacson  <eitan@ascender.com>
+
 	* README: Added gconf-dev as a requirement for builing from SVN.
 	* plugins/ipython_view.py: * plugins/ipython_view.py: Fixed home
 	and left key behavior (bug 431882).
